<resources>
    <string name="app_name">chapter4challenge</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="id_notes_example"><b>ID : </b>Customize</string>
    <string name="title_notes_example"><b>Title : </b>Deskmat Design</string>
    <string name="header_notes_example">Notes #1</string>
    <string name="btn_update">Update</string>
    <string name="input_id">Enter ID</string>
    <string name="input_password">Enter Password</string>
    <string name="header_update">Wanna Change Your Data ?</string>
    <string name="title_apps">NAKAMA\nNOTES</string>
    <string name="header_apps">Logo Aplikasi</string>
    <string name="header_create">WHOOF WHOOF</string>
    <string name="subheader_create">Let\'s create\nan account</string>
    <string name="create_username">Username</string>
    <string name="create_email">e-Mail</string>
    <string name="create_pass">Password</string>
    <string name="create_copass">Confirm Password</string>
    <string name="btn_signup">Sign Up</string>
    <string name="create_question">Have an account ?</string>
    <string name="create_option">Sign In</string>
    <string name="header_signin">WELCOME BACK\nNAKAMA !</string>
    <string name="subheader_signin">Sign In to continue</string>
    <string name="question_signin">Don\'t have an account ?</string>
    <string name="option_signin">Sign Up</string>
    <string name="btn_signin">Log In</string>
    <string name="header_add">Add a New Data</string>
    <string name="header_pass">Masukkan ID</string>
    <string name="btn_add">Add</string>
    <string name="btn_logout">Log Out</string>
</resources>