<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/go"
    app:cardCornerRadius="15dp"
    app:cardElevation="5dp"
    tools:context=".view.crud.CreateDialogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/addHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:fontFamily="@font/marykate"
            android:text="@string/header_add"
            android:textSize="60sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/addId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/yon"
            android:fontFamily="@font/marykate"
            android:hint="@string/header_pass"
            android:minHeight="48dp"
            android:textSize="24sp"
            tools:ignore="Autofill,TextFields" />

        <EditText
            android:id="@+id/addTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:background="@color/yon"
            android:fontFamily="@font/marykate"
            android:hint="@string/input_id"
            android:minHeight="48dp"
            android:textSize="24sp"
            tools:ignore="Autofill,TextFields" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:backgroundTint="@color/san"
            android:fontFamily="@font/marykate"
            android:text="@string/btn_add"
            android:textAllCaps="false"
            android:textSize="28sp"
            android:textStyle="bold"
            app:cornerRadius="10dp"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>

</androidx.cardview.widget.CardView>