<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="pastNotes"
            type="binar.academy.chapter4challenge.room.notelist.Notes" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/roku"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        tools:context=".view.crud.UpdateDialogFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/updateHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:fontFamily="@font/marykate"
                android:text="@string/header_update"
                android:textSize="40sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/updateId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/yon"
                android:fontFamily="@font/marykate"
                android:hint="@string/input_id"
                android:text="@{pastNotes.title}"
                android:minHeight="48dp"
                android:textSize="24sp"
                android:autofillHints="Masukkan ID"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/updateTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:background="@color/yon"
                android:fontFamily="@font/marykate"
                android:hint="@string/input_password"
                android:text="@{pastNotes.content}"
                android:minHeight="48dp"
                android:textSize="24sp"
                android:autofillHints="Masukkan Judul"
                tools:ignore="TextFields" />

            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:backgroundTint="@color/san"
                android:fontFamily="@font/marykate"
                android:text="@string/btn_update"
                android:textAllCaps="false"
                android:textSize="28sp"
                android:textStyle="bold"
                app:cornerRadius="10dp"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>