<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="notesData"
            type="binar.academy.chapter4challenge.database.Notes" />

    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/go"
        android:padding="16dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/notesHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:fontFamily="@font/marykate"
                android:text="@string/header_notes_example"
                android:textSize="40sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/notesId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/marykate"
                android:text="@string/id_notes_example"
                android:textSize="24sp"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/notesTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:fontFamily="@font/marykate"
                android:text="@string/title_notes_example"
                android:textSize="24sp"
                android:textColor="@color/white" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>